--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,14 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+    </style>
+    <style name="CustomEditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@null</item> <!-- Set the background to null to remove the underline -->
+        <!-- Add any other custom properties you want to apply to the EditText here -->
+    </style>
+    <style name="customButtongetstartedandsignin" parent="Widget.MaterialComponents.Button">
+        <item name="android:background">@color/black</item> <!-- Set the background to null to remove the underline -->
+        <!-- Add any other custom properties you want to apply to the EditText here -->
     </style>
 </resources>
