--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -120,6 +120,8 @@ android:background="@drawable/sigininback"
         </RelativeLayout>
 
         <com.google.android.material.button.MaterialButton
+
+          android:id="@+id/signinbtn"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="Sign in"
