--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,8 +18,18 @@
         <item name="android:background">@null</item> <!-- Set the background to null to remove the underline -->
         <!-- Add any other custom properties you want to apply to the EditText here -->
     </style>
+    <style name="ToolbarStyle" parent="@style/Widget.AppCompat.Toolbar">
+        <item name="contentInsetStart">0dp</item>
+        <item name="android:contentInsetStart">0dp</item>
+    </style>
+
+
     <style name="customButtongetstartedandsignin" parent="Widget.MaterialComponents.Button">
-        <item name="android:background">@color/black</item> <!-- Set the background to null to remove the underline -->
-        <!-- Add any other custom properties you want to apply to the EditText here -->
+    <item name="android:backgroundTint">@color/black</item>
+    <item name="strokeWidth">2dp</item>
+    <item name="strokeColor">#BEB9B9</item>
+    </style>
+    <style name="MenuTextColorStyle" parent="@android:style/Widget.PopupMenu">
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
