--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,4 +24,14 @@
         <item name="strokeWidth">2dp</item>
         <item name="strokeColor">#BEB9B9</item>
     </style>
+    <style name="MenuTextColorStyle" parent="@android:style/Widget.PopupMenu">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ToolbarStyle" parent="@style/Widget.AppCompat.Toolbar">
+        <item name="contentInsetStart">0dp</item>
+        <item name="android:contentInsetStart">0dp</item>
+    </style>
+
+
 </resources>
