--- a/app/src/main/res/drawable/posterpscrbackparent.xml
+++ b/app/src/main/res/drawable/posterpscrbackparent.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="10dp"/>
+
+    <stroke android:width="2dp" android:color="@color/white"/>
+</shape>
