--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -32,4 +32,20 @@
     <style name="MenuTextColorStyle" parent="@android:style/Widget.PopupMenu">
         <item name="android:textColor">@color/white</item>
     </style>
+
+
+    <style name="customButtonmainposterplay" parent="Widget.MaterialComponents.Button">
+        <item name="android:backgroundTint">@color/white</item>
+
+    </style>
+
+    <style name="customButtonvideoscreendownload" parent="Widget.MaterialComponents.Button">
+        <item name="android:background">#90FFFFFF</item>
+        <item name="backgroundTint">#847F7F</item>
+
+
+        <item name="iconTint">@color/white</item>
+    </style>
+
+
 </resources>
