--- a/app/src/main/res/layout/fragment_morelikethisfragment.xml
+++ b/app/src/main/res/layout/fragment_morelikethisfragment.xml
@@ -3,12 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".Fragmentsnetflix.Morelikethisfragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+<androidx.recyclerview.widget.RecyclerView
+
+  android:id="@+id/mltrc"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:scrollbars="none"
+    />
 
 </FrameLayout>
