--- a/app/src/main/res/layout/fragment_trailersfragment.xml
+++ b/app/src/main/res/layout/fragment_trailersfragment.xml
@@ -5,10 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".Fragmentsnetflix.Trailersfragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/trailerrc"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:scrollbars="none"
+
+        />
 
 </FrameLayout>
