--- a/app/src/main/res/layout/hosrizonlayer.xml
+++ b/app/src/main/res/layout/hosrizonlayer.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="130dp"
-    android:layout_height="150dp"
+    android:layout_width="150dp"
+    android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="0dp"
     android:layout_marginRight="10dp"
-
+android:layout_margin="2dp"
    >
 
 <ImageView
-    android:layout_width="match_parent"
+    android:layout_width="150dp"
     android:layout_height="match_parent"
     android:id="@+id/horimage"
     android:scaleType="centerCrop"
