--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+
     tools:context=".Fragmentsnetflix.HomeFragment">
 
     <ScrollView
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/parenttb"
         android:layout_marginBottom="10dp"
+
 
         >
 
@@ -156,11 +157,12 @@
 
             </RelativeLayout>
             <LinearLayout
+                android:background="@color/black"
                 android:id="@+id/postyearsec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/pascrposterpa"
-                android:layout_marginTop="15dp"
+                android:paddingTop="15dp"
                 android:orientation="vertical"
 
                 >
@@ -188,11 +190,12 @@
 
             </LinearLayout>
             <LinearLayout
+                android:background="@color/black"
                 android:id="@+id/trendingnowsec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/postyearsec"
-                android:layout_marginTop="15dp"
+                android:paddingTop="15dp"
                 android:orientation="vertical"
                 >
 
@@ -219,11 +222,12 @@
 
             </LinearLayout>
             <LinearLayout
+                android:background="@color/black"
                 android:id="@+id/MobileGamessec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/trendingnowsec"
-                android:layout_marginTop="15dp"
+                android:paddingTop="15dp"
                 android:orientation="vertical"
                 >
 
@@ -251,11 +255,12 @@
 
             </LinearLayout>
             <LinearLayout
+                android:background="@color/black"
                 android:id="@+id/tvdramas"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/MobileGamessec"
-                android:layout_marginTop="15dp"
+                android:paddingTop="15dp"
                 android:orientation="vertical"
                 >
 
@@ -283,11 +288,12 @@
             </LinearLayout>
 
             <LinearLayout
+                android:background="@color/black"
                 android:id="@+id/horrormovies"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/MobileGamessec"
-                android:layout_marginTop="15dp"
+                android:paddingTop="15dp"
                 android:orientation="vertical"
                 >
 
@@ -304,6 +310,7 @@
 
                     />
                 <androidx.recyclerview.widget.RecyclerView
+
                     android:id="@+id/horrorrc"
                     android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
