--- a/app/src/main/res/layout/hosrizonlayer.xml
+++ b/app/src/main/res/layout/hosrizonlayer.xml
@@ -6,8 +6,14 @@
     android:padding="0dp"
     android:layout_marginRight="10dp"
 android:layout_margin="2dp"
+    android:background="@drawable/cornercurve"
    >
-
+    <androidx.cardview.widget.CardView
+        android:layout_width="150dp"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="6dp"
+    app:cardElevation="4dp"
+    >
 <ImageView
     android:layout_width="150dp"
     android:layout_height="match_parent"
@@ -15,6 +21,8 @@ android:layout_margin="2dp"
     android:scaleType="centerCrop"
 
     app:cornerRadius="100dp"
+    android:background="@drawable/cornercurve"
     />
+</androidx.cardview.widget.CardView>
 
 </LinearLayout>
